gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__grid_all_to_all_with_bypass_variable_widths.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"           ████      ████      ████      ████                                                                                       "
"        ╭──N1██───┬──N5██───┬──N9██───┬──N13█───╮                                                                                   "
"        │  ████   │  ████   │  ████   │  ████   │                                                                                   "
"        │         │         │         │         │                                                                                   "
"        │ ███████ │ ███████ │ ███████ │ ███████ │                                                                                   "
"        ├─██N2███─┼─██N6███─┼─██N10██─┼─██N14██─┤                                                                                   "
"        │ ███████ │ ███████ │ ███████ │ ███████ │                                                                                   "
"        │         │         │         │         │                                                                                   "
"  █████ │  ████   │  ████   │  ████   │  ████   │ █████                                                                             "
"  █N0██─┼──N3██───┼──N7██───┼──N11█───┼──N15█───┼─█N17█                                                                             "
"  █████ │  ████   │  ████   │  ████   │  ████   │ █████                                                                             "
"        │         │         │         │         │                                                                                   "
"        │ ███████ │ ███████ │ ███████ │ ███████ │                                                                                   "
"        ├─██N4███─┴─██N8███─┴─██N12██─┴─██N16██─┤                                                                                   "
"        │ ███████   ███████   ███████   ███████ │                                                                                   "
"        │                                       │                                                                                   "
"        │             █████████████             │                                                                                   "
"        ╰─────────────█████N18█████─────────────╯                                                                                   "
"                      █████████████                                                                                                 "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
