gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__grid_window_of_whole_shells.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                           ◁─╮                      "
"                                                        ◁─╮                  │                      "
"                                                     ◁─╮  │                  │                      "
"                                    ◁─╮   ╭─▷          │  │              ◁─╮ ├─●─▷                  "
"                                      ├─●─┴──╮         │  ├─●─┬─▷          │ │                      "
"                                ◁─╮   │    ╭─│─╮       │  │   │  ╭─▷       ├─│─●─▷                  "
"                         ╭─▷      │   │    │ ╰─│─╮     ├──│─●─│──┤      ╭──│─╯                      "
"                         │        ├───│─●──│─╮ │ │   ╭─│──╯   ╰──│──╮   │  │                        "
"                         │     ╭──│───╯    │ │ ╰─┴─●─┤ │         │  ├─●─┤  │                        "
"                     ◁─●─┴─┬─●─┤  │      ╭─╯ ├─▷     ╰─│──╮   ╭──│──╯   ╰──│──┬─●─▷                 "
"                         ╭─╯   ╰──│──╮   │   ╰──╮   ╭──╯  │   │  ╰──╮   ╭──╯  │                     "
"                     ◁─●─┤        │  ├─●─┴──╮ ╭─┴─●─┤     ├─●─┤     ├─●─┤     │                     "
"                         ╰──╮   ╭─│──╯      │ │     ╰─╮ ╭─╯   ╰─╮ ╭─╯   │   ╭─╯                     "
"                            ├─●─┤ │         │ │       ╰─│─╮   ╭─│─╯     ╰─╮ │                       "
"                          ╭─╯   ╰─│─╮     ╭─│─╯         │ ├─●─┤ │         ╰─│─╮                     "
"                        ╭─╯       │ ╰─╮   │ │           │ │   │ │           │ ├─●─▷                 "
"                    ◁─●─┤      ╭──╯   ├─●─┴─┴─────●─────┴─╯   │ │           │ │                     "
"                        ╰──┬─●─┴──────╯                       ╰─┴─────●─────┴─╯                     "
"                     ◁─●─┬─╯                                                                        "
"                         ╰─▷                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
