gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__lattice_window_from_its_root.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                       ╭──●─▷                       "
"                                                                  ╭──●─┴────╮                       "
"                                                             ╭──●─┴───╮   ╭─┴─●─▷                   "
"                                                        ╭──●─┴──╮   ╭─┴─●─┴─╮                       "
"                                                    ╭─●─┴─╮   ╭─┴─●─┴─╮   ╭─┴─●─▷                   "
"                                                  ●─┤     ├─●─┤     ╭─┴─●─┴─╮                       "
"                                                    ╰─●─┬─╯   ╰─┬─●─┤     ╭─┴─●─▷                   "
"                                                        ╰──●─┬──╯   ╰─┬─●─┤                         "
"                                                             ╰──●─┬───╯   ╰─┬─●─▷                   "
"                                                                  ╰──●─┬────╯                       "
"                                                                       ╰──●─▷                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
