gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__long_chain_middle_window_wormholes.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"             █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████            "
"           ◁─█N45█─█N46█─█N47█─█N48█─█N49█─█N50█─█N51█─█N52█─█N53█─█N54█─█N55█─▷          "
"             █████ █████ █████ █████ █████ █████ █████ █████ █████ █████ █████            "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
