gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__simple_cycle.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"     █████ █████ █████                                      "
"   ╭─█N0██─█N1██─█N2██─╮                                    "
"   ▲ █████ █████ █████ │                                    "
"   │                   │                                    "
"   ╰─◀───────────────◀─╯                                    "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
